--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       message: document.getElementById("message").value
     };
 
-    emailjs.send("service_0vjozfn", "YOUR_TEMPLATE_ID", params)
+    emailjs.send("service_0vjozfn", "template_mvugnsv", params)
       .then(() => {
         statusText.textContent = "✅ Message sent successfully!";
         statusText.className = "form-status success";
